--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "repository": "https://github.com/dotplants/erai.git",
   "author": "dotPlants Team <oss-cst@dotplants.net>",
-  "license": "AGPL-3.0",
+  "license": "MIT",
   "private": true,
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@yuzulabo/eslint-config": "^1.0.1",
     "@yuzulabo/prettier-config": "^1.0.1",
     "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
     "eslint-plugin-react": "^7.14.3",
     "nodemon": "^1.19.2",
@@ -30,13 +32,16 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
+    "classnames": "^2.2.6",
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "lint:js": "eslint --ignore-path .gitignore \"**/*.js\" && prettier --check --ignore-path .gitignore \"**/*.js\"",
@@ -53,7 +58,7 @@
     "build:server": "babel server -d build --config-file ./.babelrc.server.js",
     "build": "npm-run-all build:* -s",
     "watch:client": "parcel watch client/index.html --public-url ./assets/dist/ -d public/dist",
-    "watch:server": "nodemon --exec \"NODE_ENV=development babel-node server/index.js --config-file ./.babelrc.server.js\"",
+    "watch:server": "nodemon --exec \"NODE_ENV=development babel-node server/index.js --config-file ./.babelrc.server.js\" --watch server",
     "start": "node build/index.js"
   },
   "prettier": "@yuzulabo/prettier-config"
